[gd_scene load_steps=27 format=3 uid="uid://ba4bk0n2hayw4"]

[ext_resource type="Texture2D" uid="uid://di2ft3nukfiuy" path="res://Assert/image/Event01-Door01.png" id="1_jk26w"]
[ext_resource type="Texture2D" uid="uid://cudvvnvwaijjy" path="res://Assert/image/Event01-Door03.png" id="2_a2ifu"]
[ext_resource type="Script" path="res://Script/door.gd" id="2_vc1ff"]

[sub_resource type="AtlasTexture" id="AtlasTexture_tqsth"]
atlas = ExtResource("1_jk26w")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3c56c"]
atlas = ExtResource("1_jk26w")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t1x5j"]
atlas = ExtResource("1_jk26w")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uye6y"]
atlas = ExtResource("1_jk26w")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_byowy"]
atlas = ExtResource("1_jk26w")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cggag"]
atlas = ExtResource("1_jk26w")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ug7s5"]
atlas = ExtResource("1_jk26w")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3wnyi"]
atlas = ExtResource("1_jk26w")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_70rwm"]
atlas = ExtResource("2_a2ifu")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eiixt"]
atlas = ExtResource("2_a2ifu")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_76ovl"]
atlas = ExtResource("2_a2ifu")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_krlbj"]
atlas = ExtResource("2_a2ifu")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rnbu5"]
atlas = ExtResource("1_jk26w")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vumnd"]
atlas = ExtResource("1_jk26w")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xhd83"]
atlas = ExtResource("1_jk26w")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8hj18"]
atlas = ExtResource("1_jk26w")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dadr8"]
atlas = ExtResource("1_jk26w")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x30up"]
atlas = ExtResource("1_jk26w")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lku5y"]
atlas = ExtResource("1_jk26w")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3bjp3"]
atlas = ExtResource("1_jk26w")
region = Rect2(0, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_mqgnw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tqsth")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3c56c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1x5j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uye6y")
}],
"loop": false,
"name": &"bdoor",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_byowy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cggag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ug7s5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3wnyi")
}],
"loop": false,
"name": &"gdoor",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_70rwm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eiixt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_76ovl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_krlbj")
}],
"loop": false,
"name": &"mdoor",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rnbu5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vumnd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xhd83")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8hj18")
}],
"loop": false,
"name": &"rdoor",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dadr8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x30up")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lku5y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3bjp3")
}],
"loop": false,
"name": &"ydoor",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bu48g"]
size = Vector2(31, 31)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p4kv6"]
size = Vector2(31.5, 31.5)

[node name="door" type="AnimatedSprite2D"]
position = Vector2(0, -1)
sprite_frames = SubResource("SpriteFrames_mqgnw")
animation = &"ydoor"
speed_scale = 2.0
centered = false
script = ExtResource("2_vc1ff")

[node name="enable_broken" type="CharacterBody2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="enable_broken"]
visible = false
position = Vector2(16, 16)
shape = SubResource("RectangleShape2D_bu48g")

[node name="Area2D" type="Area2D" parent="enable_broken"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="enable_broken/Area2D"]
visible = false
position = Vector2(16, 16)
shape = SubResource("RectangleShape2D_p4kv6")

[connection signal="animation_finished" from="." to="." method="_on_door_animation_finished"]
[connection signal="child_exiting_tree" from="." to="." method="_on_child_exiting_tree"]
[connection signal="body_entered" from="enable_broken/Area2D" to="." method="_on_body_entered"]
